--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
+    "@eslint/js": "^9.0.0",
     "@vitejs/plugin-react": "^4.2.0",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint": "^9.0.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "globals": "^15.0.0",
+    "typescript-eslint": "^8.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
   }
