fix some errors

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,11 @@
-# Development environment variables
-VITE_API_BASE_URL=http://localhost:5000/api
-VITE_APP_TITLE=电厂智能问答系统
+# API配置
+VITE_API_BASE_URL=http://192.168.50.50:5000
+
+# 应用配置
+VITE_APP_TITLE=电厂智能问答系统 [开发]
+
+# 日志级别
 VITE_LOG_LEVEL=debug
+
+# 功能开关
+VITE_ENABLE_MOCK=false
