--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,8 @@
-# Production environment variables
+# API配置 - 生产环境使用相对路径
 VITE_API_BASE_URL=/api
+
+# 应用配置
 VITE_APP_TITLE=电厂智能问答系统
+
+# 日志级别
 VITE_LOG_LEVEL=error
