--- a/package.json
+++ b/package.json
@@ -7,33 +7,49 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext ts,tsx --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx,css,json}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,css,json}\"",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "antd": "^5.12.0",
-    "axios": "^1.6.0",
-    "@tanstack/react-query": "^5.12.0",
-    "zustand": "^4.4.0",
-    "react-markdown": "^9.0.0",
-    "rehype-highlight": "^7.0.0",
-    "rehype-raw": "^7.0.0",
+    "@ant-design/icons": "^6.1.0",
+    "@tanstack/react-query": "^5.62.11",
+    "antd": "^6.1.0",
+    "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-markdown": "^10.0.0",
+    "rehype-highlight": "^7.0.1",
+    "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0",
-    "dayjs": "^1.11.0",
-    "@ant-design/icons": "^5.2.0"
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
     "@eslint/js": "^9.0.0",
-    "@vitejs/plugin-react": "^4.2.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.1",
+    "@types/node": "^25.0.2",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
+    "@vitejs/plugin-react": "^5.1.2",
+    "@vitest/ui": "^4.0.15",
     "eslint": "^9.0.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "globals": "^15.0.0",
+    "jsdom": "^25.0.1",
+    "prettier": "^3.4.2",
+    "typescript": "^5.7.2",
     "typescript-eslint": "^8.0.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "vite": "^7.3.0",
+    "vitest": "^4.0.15"
   }
 }
