--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 # API配置
-VITE_API_BASE_URL=http://192.168.50.50:5000
+VITE_API_BASE_URL=http://192.168.50.11:8006/api/
 VITE_CHAT_ENDPOINT=/api/react_query
 
 # 应用配置
