change port to dev

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # API配置 - 生产环境使用相对路径
-VITE_API_BASE_URL=/api
+VITE_API_BASE_URL=http://192.168.50.168:5001
 VITE_CHAT_ENDPOINT=/api/react_query
 
 # 应用配置
