finish thinking stream

--- a/.env.development
+++ b/.env.development
@@ -10,3 +10,10 @@ VITE_LOG_LEVEL=debug
 
 # 功能开关
 VITE_ENABLE_MOCK=false
+
+# 思考流配置
+VITE_ENABLE_THINKING_STREAM=true
+VITE_STREAM_ENDPOINT=/api/react_stream
+VITE_FALLBACK_ENDPOINT=/api/react_query
+VITE_STREAM_HEARTBEAT_TIMEOUT=30000
+VITE_THINKING_PREVIEW_MAX_LENGTH=500
