--- a/.env.production
+++ b/.env.production
@@ -7,3 +7,10 @@ VITE_APP_TITLE=电厂智能问答系统
 
 # 日志级别
 VITE_LOG_LEVEL=error
+
+# 思考流配置
+VITE_ENABLE_THINKING_STREAM=true
+VITE_STREAM_ENDPOINT=/api/react_stream
+VITE_FALLBACK_ENDPOINT=/api/react_query
+VITE_STREAM_HEARTBEAT_TIMEOUT=30000
+VITE_THINKING_PREVIEW_MAX_LENGTH=500
