--- a/.env.production
+++ b/.env.production
@@ -1,16 +1,45 @@
 # API配置 - 生产环境使用相对路径
-VITE_API_BASE_URL=http://192.168.50.168:5001
-VITE_CHAT_ENDPOINT=/api/react_query
+VITE_API_BASE_URL=http://192.168.50.168:5000
+
+# API 端点配置
+# 聊天相关
+VITE_CHAT_ENDPOINT=/api/chat
+VITE_REACT_QUERY_ENDPOINT=/api/react_query
+
+# 会话/Context 管理
+VITE_SESSION_CREATE_ENDPOINT=/api/session/create
+VITE_CONTEXT_INFO_ENDPOINT=/api/context
+VITE_CONTEXT_DELETE_ENDPOINT=/api/context
+VITE_CONTEXT_REFRESH_ENDPOINT=/api/context
+
+# 文档相关
+VITE_DOCUMENT_UPLOAD_ENDPOINT=/api/upload
+VITE_DOCUMENT_LIST_ENDPOINT=/api/documents
+VITE_UPLOAD_STATUS_ENDPOINT=/api/upload/status
+
+# 系统相关
+VITE_HEALTH_ENDPOINT=/health
+VITE_STATS_ENDPOINT=/api/stats
+
+# 数据库相关
+VITE_DATABASE_INFO_ENDPOINT=/api/database/info
 
 # 应用配置
-VITE_APP_TITLE=电厂智能问答系统
+VITE_APP_TITLE=电厂智能问答系统 [开发]
 
 # 日志级别
-VITE_LOG_LEVEL=error
+VITE_LOG_LEVEL=debug
+
+# 功能开关
+VITE_ENABLE_MOCK=false
 
 # 思考流配置
-VITE_ENABLE_THINKING_STREAM=true
+VITE_ENABLE_THINKING_STREAM=false
 VITE_STREAM_ENDPOINT=/api/react_stream
 VITE_FALLBACK_ENDPOINT=/api/react_query
 VITE_STREAM_HEARTBEAT_TIMEOUT=30000
 VITE_THINKING_PREVIEW_MAX_LENGTH=500
+
+# 上传配置
+VITE_UPLOAD_POLL_INTERVAL=2000
+VITE_UPLOAD_MAX_RETRIES=3
