add feature: update index

--- a/.env.production
+++ b/.env.production
@@ -15,6 +15,10 @@ VITE_DOCUMENT_UPLOAD_ENDPOINT=/api/upload
 VITE_DOCUMENT_LIST_ENDPOINT=/api/documents
 VITE_UPLOAD_STATUS_ENDPOINT=/api/upload/status
 
+# 向量库更新相关
+VITE_UPDATE_INDEX_ENDPOINT=/api/update_index
+VITE_UPDATE_INDEX_STATUS_ENDPOINT=/api/update_index/status
+
 # 系统相关
 VITE_HEALTH_ENDPOINT=/health
 VITE_STATS_ENDPOINT=/api/stats
